# demos

.github/workflows/: rust.yml
cairo/: Cargo.toml
cairo/src/: main.rs
cairo_shadow_button/: Cargo.toml
cairo_shadow_button/src/: main.rs
cairo_shadow_button/src/model/: mod.rs
calculator/: Cargo.toml
calculator/src/: main.rs
calculator/src/model/: mod.rs
calendar/: Cargo.toml
calendar/src/: main.rs
picture/src/model/: mod.rs
resters/src/: main.rs
