[package]
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
name = "calendar"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1", features = ["use-ninja"] }
fltk-calendar = "0"
chrono = "0"
cascade = "1.0.1"
